--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a id="header-title" href="index.html" style="color:gray;">My Coding Resume</a>
 
     <ul id="header-nav">
-      <li style="color:gray;"><a href="about.html" style="color:gray;">About the Coder</a></li>
+      <li style="color:gray;"><a href="https://kimboann21.github.io/about.html" style="color:gray;">About the Coder</a></li>
       <li style="color:gray;"><a href="mailto:kimgrossman21@gmail.com?subject=feedback" style="color:gray;">Email Me</a></li>
     </ul>
 
