--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="about">
         <div class="about-author">
-          <img src="IMG_3797.JPG">
+          <img src="Bailey.JPG">
         </div>
 
       <h1 class="about-title">The Resume Part</h1>
