Updated Formatting 9:51pm

--- a/About.html
+++ b/About.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet"; type="text/css"; href="styles.css";>
@@ -6,14 +6,14 @@
 </head>
 <body>
   <div id="header" class="container">
-    <a id="header-title" href="index.html" style="color:gray;">My Coding Resume</a>
+    <a id="header-title" href="index.html" style="color:white;">My Coding Resume</a>
   </div>
 
   <div id="body">
     <div class="container">
       <div class="about">
         <div class="about-author">
-          <img src="Bailey.JPG">
+          <img src="IMG_3797.JPG">
         </div>
 
       <h1 class="about-title">The Resume Part</h1>
@@ -50,8 +50,8 @@
       </p>
     </div>
     <div class="column">
-      <h4>My Story</h4>
-      <p>Hello, and welcome to my interactive resume. Thank you for stopping by!</p>
+      <p>Hello, and welcome to my interactive resume.<br>Thank you for stopping by!</p><br>
+      <p>Look around, hover and click items to see more!</p>
     </div>
   </div>
 </body>
