--- a/About.html
+++ b/About.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet"; type="text/css"; href="styles.css";>
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="about">
         <div class="about-author">
-          <img src="IMG_3797.JPG">
+          <img src="Smiles.JPEG">
         </div>
 
       <h1 class="about-title">The Resume Part</h1>
