--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a id="header-title" href="index.html" style="color:white;">My Coding Resume</a>
 
     <ul id="header-nav">
-      <li style="color:gray;"><a href="About.html">About the Coder</a></li>
+      <li style="color:gray;"><a href="About.html" style="color:black;">About the Coder</a></li>
     </ul>
 
   </div>
